user 테이블 스키마 추가 : notnull, unique 이메일 로그인, 이메일 계정 생성 api 파라미터 밸리데이션 추가
